# sakura

./: .build.yml  .gitignore  LICENSE  README.org  client.el  config-unix.sexp  config.sexp  dune-project  flake.nix  http_demo_commands.sexp  index.html  prl_demo_commands.sexp  rebar-deps.nix  rebar.config  run_tcp.ps1  sakura.opam  todos.pl  treefmt.nix
.github/workflows/: build.yml  ci.yml  docs.yml
config/: shell.config  vm.args
deploy/systemd/: domino.service
docs/: about.org  architecture.org  architecture.plantuml  code.org  command-interface.puml  constraint-classification.puml  constraint-enforcement-strategies.puml  constraints.org  data-model.puml  dcl-quantification.org  dcl.org  distribution-architecture.puml  features.org  icl-quantification.org  icl.org  incremental_constraint_checking.org  infinite-relations.puml  infinite_relations_design.org  iterator-pipeline.puml  karuta-integration.org  karuta-interface-layers.puml  merkle-tree-hierarchy.puml  module-dependencies.puml  n-way-binding.org  prl.org  provenance-lineage.puml  query-execution-flow.puml  reactive-queries.puml  relational-algebra.org  reliability_roadmap.org  roadmap.puml  system-overview.puml  temporal-queries.puml  transaction-algo.org  type-checking-flow.puml  type-hierarchy.puml
example_ocaml_runtime_load/: main.ml  my_plugin.ml  plugin_intf.ml  run.ps1  test_plugin.ml
include/: operations.hrl
lib/: algebra.ml  attribute.ml  catalog.ml  configuration.ml  constraint.ml  constraint.mli  conventions.ml  core_functions.ml  core_types.ml  dbms_language.ml  disk.ml  domain.ml  dune  envelope.ml  error.ml  generator.ml  hashing.ml  interop.ml  listener.ml  manipulation.ml  manipulation.mli  merkle.ml  protocol.ml  qualified_name.ml  qualified_name.mli  relation.ml  schema.ml  server.ml  session.ml  storable.ml  sublanguage.ml  sublanguage_types.ml  system.ml  transport.ml  tuple.ml  utilities.ml
lib/dcl/: ast.ml  executor.ml  parser.ml  sublanguage.ml
lib/ddl/: ast.ml  executor.ml  parser.ml  sublanguage.ml
lib/dml/: ast.ml  executor.ml  parser.ml  sublanguage.ml
lib/drl/: ast.ml  executor.ml  gate.ml  parser.ml  sublanguage.ml
lib/drl_verified/: drl_verified.ml  drl_verified.mli
lib/icl/: ast.ml  executor.ml  sublanguage.ml
lib/management/: branch.ml  database.ml  diff.ml  merge.ml  physical.ml  stream.ml  stream.mli
lib/prelude/: catalog.ml  domains.ml  standard.ml
lib/prl/: ast.ml  executor.ml  parser.ml  plugin_api.ml  runtime.ml  sublanguage.ml
lib/scl/: ast.ml  executor.ml  parser.ml  sublanguage.ml
prl_api/: dune  sakura_prl_api.ml
proof/: .gitignore  Drl.v  Extraction.v  Makefile  Relation.v  Schema.v  _CoqProject  drl_verified.ml  drl_verified.mli
shared/librelational_engine/: CMakeLists.txt  library.cpp  library.h
src/: constraint.erl  generators.erl  main.app.src  main.erl  operations.erl  poc.erl  query_planner.erl  relation.erl  relational_operators.erl  repl.erl  visualizer.erl  xml_server.erl  xml_server_app.erl
test/: constraint_2op_tests.erl  dune  function_relations_test.erl  infinite_relations_test.erl  join_test.erl  operations_test.erl  provenance_test.erl  query_pipeline_test.erl  test_relational_engine.ml
web/: index.html
