(include_subdirs qualified)

(library
 (name relational_engine)
 (public_name sakura.relational_engine)
 (libraries
  dynlink
  sakura_prl_api
  sha
  data-encoding
  lwt
  lwt.unix
  lwt-exit
  batteries
  ppx_protocol_conv_xml_light
  sexplib)
 (preprocess
  (pps ppx_deriving.show ppx_sexp_conv ppx_protocol_conv)))
